Finish to configuration first controller with swag
