# core/patient/controller.go
@@ -40,6 +40,18 @@ func (c *controller) GetPacients(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, patients)
 }
 
+// CreatePatient godoc
+// @Summary Create a new patient
+// @Description create patient with body patient json
+// @Accept  json
+// @Produce  json
+// @Param patients body patient.Patient true "Patient"
+// @Success 200 {object} patient.Patient
+// @Header 200 {string} Token "qwerty"
+// @Failure 400 {object} http.HTTPError
+// @Failure 404 {object} http.HTTPError
+// @Failure 500 {object} http.HTTPError
+// @Router /patients [post]
 func (c *controller) NewPatient(ctx *gin.Context) {
 	var patient Patient
 	if err := ctx.ShouldBindJSON(&patient); err != nil {
@@ -56,6 +68,19 @@ func (c *controller) NewPatient(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, result)
 }
 
+// ShowPatient godoc
+// @Summary Show a patient
+// @Description get string by ID
+// @ID get-string-by-int
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Patient ID"
+// @Success 200 {object} patient.Patient
+// @Header 200 {string} Token "qwerty"
+// @Failure 400 {object} http.HTTPError
+// @Failure 404 {object} http.HTTPError
+// @Failure 500 {object} http.HTTPError
+// @Router /patients/{id} [get]
 func (c *controller) GetPatient(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 
@@ -73,6 +98,20 @@ func (c *controller) GetPatient(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, patients)
 }
 
+// UpdatePatient godoc
+// @Summary Update a patient
+// @Description get string by ID
+// @ID get-string-by-int
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Patient ID"
+// @Param patients body patient.Patient true "Patient"
+// @Success 200 {object} patient.Patient
+// @Header 200 {string} Token "qwerty"
+// @Failure 400 {object} http.HTTPError
+// @Failure 404 {object} http.HTTPError
+// @Failure 500 {object} http.HTTPError
+// @Router /patients/{id} [put]
 func (c *controller) UpdatePatient(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 
@@ -95,6 +134,19 @@ func (c *controller) UpdatePatient(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, result)
 }
 
+// DeletePatient godoc
+// @Summary Delete a patient
+// @Description get string by ID
+// @ID get-string-by-int
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Patient ID"
+// @Success 200 {object} patient.Patient
+// @Header 200 {string} Token "qwerty"
+// @Failure 400 {object} http.HTTPError
+// @Failure 404 {object} http.HTTPError
+// @Failure 500 {object} http.HTTPError
+// @Router /patients/{id} [delete]
 func (c *controller) DeletePatient(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 
